--- a/Week 11/Day 4/DailyChallenge/templates/homepage.html
+++ b/Week 11/Day 4/DailyChallenge/templates/homepage.html
@@ -9,16 +9,16 @@
     <nav>
         <ul>
             <li>
-                <a href='blue'>blue</a>
+                <a href={{ url_for("blue") }}>blue</a>
             </li>
             <li>
-                <a href='red'>red</a>
+                <a href={{ url_for("red") }}>red</a>
             </li>
             <li>
-                <a href='green'>green</a>
+                <a href={{ url_for("green") }}>green</a>
             </li>
             <li>
-                <a href='yellow'>yellow</a>
+                <a href={{ url_for("yellow") }}>yellow</a>
             </li>
         </ul>
 </body>
